new docs api & login logout
