# api-docs.json
@@ -10,34 +10,6 @@
         }
     ],
     "paths": {
-        "\/api\/user": {
-            "get": {
-                "tags": [
-                    "auth"
-                ],
-                "summary": "isUser",
-                "responses": {
-                    "200": {
-                        "description": "Successful response",
-                        "content": {
-                            "application\/json": {
-                                "schema": {
-                                    "type": "object",
-                                    "properties": {
-                                        "data": {
-                                            "$ref": "#\/components\/schemas\/User"
-                                        }
-                                    }
-                                }
-                            }
-                        }
-                    },
-                    "401": {
-                        "description": "Unauthorized"
-                    }
-                }
-            }
-        },
         "\/api\/auth\/register": {
             "post": {
                 "tags": [
@@ -56,6 +28,47 @@
                         "example": "user"
                     },
                     {
+                        "name": "lastname",
+                        "in": "query",
+                        "description": "user lastname",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        },
+                        "example": "lastname"
+                    },
+                    {
+                        "name": "patronymic",
+                        "in": "query",
+                        "description": "user patronymic",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        },
+                        "example": "patronymic"
+                    },
+                    {
+                        "name": "number_phone",
+                        "in": "query",
+                        "description": "user number_phone",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        },
+                        "example": "number_phone"
+                    },
+                    {
+                        "name": "date_of_birth",
+                        "in": "query",
+                        "description": "user date_of_birth",
+                        "required": true,
+                        "schema": {
+                            "format": "date",
+                            "type": "string"
+                        },
+                        "example": "20.04.2001"
+                    },
+                    {
                         "name": "email",
                         "in": "query",
                         "description": "email user",
@@ -71,13 +84,14 @@
                         "description": "password user",
                         "required": true,
                         "schema": {
+                            "format": "password",
                             "type": "string"
                         }
                     }
                 ],
                 "responses": {
                     "200": {
-                        "description": "Successful response"
+                        "$ref": "#\/components\/responses\/"
                     },
                     "422": {
                         "$ref": "#\/components\/responses\/ErrorValidation"
@@ -114,7 +128,7 @@
                 ],
                 "responses": {
                     "200": {
-                        "$ref": "#\/components\/responses\/UserToken"
+                        "$ref": "#\/components\/responses\/"
                     },
                     "422": {
                         "$ref": "#\/components\/responses\/ErrorValidation"
@@ -134,6 +148,34 @@
                 "responses": {
                     "200": {
                         "description": "Successful logout"
+                    }
+                }
+            }
+        },
+        "\/api\/user": {
+            "get": {
+                "tags": [
+                    "auth"
+                ],
+                "summary": "isUser",
+                "responses": {
+                    "200": {
+                        "description": "Successful response",
+                        "content": {
+                            "application\/json": {
+                                "schema": {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#\/components\/schemas\/User"
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized"
                     }
                 }
             }
@@ -220,15 +262,29 @@
                 "type": "object",
                 "properties": {
                     "id": {
-                        "type": "string"
+                        "type": "integer"
                     },
                     "name": {
+                        "type": "string"
+                    },
+                    "lastname": {
+                        "type": "string"
+                    },
+                    "patronymic": {
+                        "type": "string"
+                    },
+                    "number_phone": {
+                        "type": "string"
+                    },
+                    "date_of_birth": {
+                        "format": "date",
                         "type": "string"
                     },
                     "email": {
                         "type": "string"
                     },
                     "password": {
+                        "format": "password",
                         "type": "string"
                     }
                 }
@@ -327,14 +383,19 @@
                     }
                 }
             },
-            "UserToken": {
-                "description": "User Token",
+            "": {
+                "description": "Successful response",
                 "content": {
                     "application\/json": {
                         "schema": {
                             "type": "object",
-                            "example": {
-                                "token": "token_string"
+                            "properties": {
+                                "user": {
+                                    "$ref": "#\/components\/schemas\/User"
+                                },
+                                "token": {
+                                    "type": "string"
+                                }
                             }
                         }
                     }
