# app/OpenApi/Responses/Auth/UserTokenResponse.php
@@ -2,22 +2,25 @@
 
 namespace App\OpenApi\Responses\Auth;
 
+use App\OpenApi\Schemas\Auth\UserSchema;
 use GoldSpecDigital\ObjectOrientedOAS\Objects\MediaType;
 use GoldSpecDigital\ObjectOrientedOAS\Objects\Response;
 use GoldSpecDigital\ObjectOrientedOAS\Objects\Schema;
 use Vyuldashev\LaravelOpenApi\Contracts\Reusable;
 use Vyuldashev\LaravelOpenApi\Factories\ResponseFactory;
 
-class LoginResponse extends ResponseFactory implements Reusable
+class UserTokenResponse extends ResponseFactory implements Reusable
 {
     public function build(): Response
     {
-        $response = Schema::object()->example(['token' => 'token_string']);
 
-        return Response::create('UserToken')
-            ->description('User Token')
-            ->content(
-                MediaType::json()->schema($response)
-            );
+        return Response::ok()->description('Successful response')->content(
+            MediaType::json()->schema(Schema::object()->
+            properties(
+                UserSchema::ref('user'),
+                Schema::string('token'),
+            )),
+        );
+
     }
 }
